--- a/ecd/jupyter/data_processing/visualizations.ipynb
+++ b/ecd/jupyter/data_processing/visualizations.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -34,12 +34,8 @@
     "    \n",
     "    \n",
     "    # EEG Sample Heatmap\n",
-    "    for idx, item in enumerate(data):\n",
-    "        if 'eeg_chunk' in item and item['eeg_chunk']:\n",
-    "            sample_item = data[idx + 1] if idx + 1 < len(data) else None\n",
-    "            break\n",
-    "    else:\n",
-    "        sample_item = None \n",
+    "    index = 10 \n",
+    "    sample_item = data[index] if index < len(data) else None\n",
     "\n",
     "    if sample_item and sample_item['eeg_chunk']:\n",
     "        # Get the first sample from the chunk\n",
@@ -133,8 +129,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-26T13:16:38.417708800Z",
-     "start_time": "2025-06-26T13:16:38.370064700Z"
+     "end_time": "2025-06-26T13:23:47.378799100Z",
+     "start_time": "2025-06-26T13:23:47.349223Z"
     }
    },
    "id": "b0a3bddf2668f1b6"
@@ -151,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -194,8 +190,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-26T13:16:41.297569700Z",
-     "start_time": "2025-06-26T13:16:38.393310500Z"
+     "end_time": "2025-06-26T13:23:49.442941100Z",
+     "start_time": "2025-06-26T13:23:47.367687500Z"
     }
    },
    "id": "723be49fdf1891c0"
