--- a/ecd/jupyter/model/CNN.ipynb
+++ b/ecd/jupyter/model/CNN.ipynb
@@ -18,9 +18,7 @@
     "# ===============================\n",
     "import sys\n",
     "import os\n",
-    "\n",
-    "# Add the path to the folder containing 'bundle' to sys.path\n",
-    "sys.path.append(os.path.abspath(\"../../\"))  # Adjust if needed\n",
+    "sys.path.append(os.path.abspath(\"../../\"))  # Adjust path to find 'bundle' folder\n",
     "\n",
     "import numpy as np\n",
     "import torch\n",
@@ -35,9 +33,11 @@
     "# 2. Constants and Configs\n",
     "# ===============================\n",
     "NUM_CLASSES = 36  # 26 letters + 9 digits + 1 underscore\n",
-    "MODEL_SAVE_PATH = \"trained_eegcnn_model.pth\"\n",
+    "MODEL_SAVE_PATH = \"trained_eegcnn_model_selected_channels.pth\"\n",
     "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "print(DEVICE)\n",
+    "print(f\"Using device: {DEVICE}\")\n",
+    "\n",
+    "SELECTED_CHANNELS = [10, 33, 48, 50, 52, 55, 59, 61]  # Only 8 selected EEG channels\n",
     "\n",
     "# ===============================\n",
     "# 3. Dataset Class\n",
@@ -52,15 +52,13 @@
     "\n",
     "    def __getitem__(self, idx):\n",
     "        chunk = np.array(self.data[idx][\"eeg_chunk\"], dtype=np.float32)  # (31, 78, 64)\n",
+    "        chunk = chunk[:, :, SELECTED_CHANNELS]  # Now (31, 78, 8)\n",
+    "        chunk[30] *= 3.0  # Emphasize the prediction timestep\n",
     "        label = self.label_encoder.transform([self.data[idx][\"character\"]])[0]\n",
-    "        \n",
-    "        # Emphasize prediction timestep (index 30) by multiplying\n",
-    "        chunk[30] *= 3.0\n",
-    "\n",
-    "        return torch.tensor(chunk).unsqueeze(0), torch.tensor(label)  # Add channel dim: (1, 31, 78, 64)\n",
+    "        return torch.tensor(chunk).unsqueeze(0), torch.tensor(label)  # Shape: (1, 31, 78, 8)\n",
     "\n",
     "# ===============================\n",
-    "# 4. SE Block\n",
+    "# 4. Squeeze-and-Excite Block\n",
     "# ===============================\n",
     "class SEBlock(nn.Module):\n",
     "    def __init__(self, channels, reduction=16):\n",
@@ -80,22 +78,20 @@
     "        return x * y.expand_as(x)\n",
     "\n",
     "# ===============================\n",
-    "# 5. Model Definition\n",
+    "# 5. EEGCNN Model\n",
     "# ===============================\n",
     "class EEGCNN(nn.Module):\n",
     "    def __init__(self, num_classes=NUM_CLASSES):\n",
     "        super(EEGCNN, self).__init__()\n",
     "        self.conv1 = nn.Conv3d(1, 32, kernel_size=3, padding=1)\n",
     "        self.bn1 = nn.BatchNorm3d(32)\n",
-    "        \n",
+    "\n",
     "        self.conv2 = nn.Conv3d(32, 64, kernel_size=3, padding=1)\n",
     "        self.bn2 = nn.BatchNorm3d(64)\n",
-    "\n",
     "        self.se1 = SEBlock(64)\n",
     "\n",
     "        self.conv3 = nn.Conv3d(64, 128, kernel_size=3, padding=1)\n",
     "        self.bn3 = nn.BatchNorm3d(128)\n",
-    "\n",
     "        self.se2 = SEBlock(128)\n",
     "\n",
     "        self.pool = nn.AdaptiveAvgPool3d(1)\n",
@@ -104,16 +100,15 @@
     "        self.fc2 = nn.Linear(64, num_classes)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = F.relu(self.bn1(self.conv1(x)))       # -> (B, 32, 31, 78, 64)\n",
-    "        x = F.relu(self.bn2(self.conv2(x)))       # -> (B, 64, 31, 78, 64)\n",
+    "        # Input: (B, 1, 31, 78, 8)\n",
+    "        x = F.relu(self.bn1(self.conv1(x)))       # -> (B, 32, 31, 78, 8)\n",
+    "        x = F.relu(self.bn2(self.conv2(x)))       # -> (B, 64, 31, 78, 8)\n",
     "        x = self.se1(x)\n",
-    "\n",
-    "        x = F.relu(self.bn3(self.conv3(x)))       # -> (B, 128, 31, 78, 64)\n",
+    "        x = F.relu(self.bn3(self.conv3(x)))       # -> (B, 128, 31, 78, 8)\n",
     "        x = self.se2(x)\n",
-    "\n",
     "        x = self.pool(x).squeeze()                # -> (B, 128)\n",
     "        x = self.dropout(F.relu(self.fc1(x)))     # -> (B, 64)\n",
-    "        return self.fc2(x)                        # -> (B, 37)\n",
+    "        return self.fc2(x)                        # -> (B, NUM_CLASSES)\n",
     "\n",
     "# ===============================\n",
     "# 6. Load and Prepare Data\n",
@@ -135,7 +130,7 @@
     "test_loader = DataLoader(test_dataset, batch_size=8)\n",
     "\n",
     "# ===============================\n",
-    "# 7. Train Loop\n",
+    "# 7. Training Function\n",
     "# ===============================\n",
     "def train_model(model, loader, optimizer, criterion, epochs=10):\n",
     "    model.train()\n",
@@ -151,18 +146,16 @@
     "            total_loss += loss.item()\n",
     "\n",
     "            if i % 10 == 0:\n",
-    "                print(f\"[Epoch {epoch+1}] Batch {i+1}/{len(loader)}, Loss: {loss.item():.4f}\")\n",
+    "                print(f\"[Epoch {epoch+1}] Batch {i+1}/{len(loader)} | Loss: {loss.item():.4f}\")\n",
     "\n",
     "        print(f\"Epoch {epoch+1}/{epochs} complete. Total Loss: {total_loss:.4f}\")\n",
     "        torch.cuda.empty_cache()\n",
     "\n",
-    "    # Save the model after training\n",
     "    torch.save(model.state_dict(), MODEL_SAVE_PATH)\n",
     "    print(f\"Model saved to: {MODEL_SAVE_PATH}\")\n",
     "\n",
-    "\n",
     "# ===============================\n",
-    "# 8. Evaluation\n",
+    "# 8. Evaluation Function\n",
     "# ===============================\n",
     "def evaluate_model(model, loader):\n",
     "    model.eval()\n",
@@ -174,11 +167,10 @@
     "            preds = outputs.argmax(dim=1)\n",
     "            correct += (preds == targets).sum().item()\n",
     "            total += targets.size(0)\n",
-    "\n",
-    "    print(f\"Accuracy: {correct / total:.2%}\")\n",
+    "    print(f\"Test Accuracy: {correct / total:.2%}\")\n",
     "\n",
     "# ===============================\n",
-    "# 9. Run It\n",
+    "# 9. Train and Evaluate\n",
     "# ===============================\n",
     "model = EEGCNN().to(DEVICE)\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
@@ -188,10 +180,10 @@
     "evaluate_model(model, test_loader)\n",
     "\n",
     "# ===============================\n",
-    "# 10. Load \n",
+    "# 10. Reload Trained Model (Optional)\n",
     "# ===============================\n",
     "model = EEGCNN()\n",
-    "model.load_state_dict(torch.load(\"trained_eegcnn_model.pth\"))\n",
+    "model.load_state_dict(torch.load(MODEL_SAVE_PATH))\n",
     "model.to(DEVICE)\n",
     "model.eval()"
    ],
