--- a/ecd/jupyter/data_processing/visualizations.ipynb
+++ b/ecd/jupyter/data_processing/visualizations.ipynb
@@ -138,6 +138,26 @@
   {
    "cell_type": "markdown",
    "source": [
+    "# 3D Visualization of EEG Data"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "84e41ac4c13cd188"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "210ff6ea851adc4c"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "# Load and Analyze Data"
    ],
    "metadata": {
