--- a/ecd/jupyter/model/test_ecd.ipynb
+++ b/ecd/jupyter/model/test_ecd.ipynb
@@ -2,13 +2,155 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2025-06-28T20:54:32.897734900Z",
+     "start_time": "2025-06-28T20:54:28.845483700Z"
+    }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Attempting to load processed data from: ../../data/characters_eeg_test.pkl\n",
+      "Error: File not found at ../../data/characters_eeg_test.pkl.\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Failed to load data.",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[1], line 80\u001B[0m\n\u001B[0;32m     78\u001B[0m raw_data \u001B[38;5;241m=\u001B[39m load_sentence_eeg_prob_data(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m../../data/characters_eeg_test.pkl\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m     79\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m raw_data:\n\u001B[1;32m---> 80\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mFailed to load data.\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m     82\u001B[0m all_labels \u001B[38;5;241m=\u001B[39m [item[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mcharacter\u001B[39m\u001B[38;5;124m\"\u001B[39m] \u001B[38;5;28;01mfor\u001B[39;00m item \u001B[38;5;129;01min\u001B[39;00m raw_data]\n\u001B[0;32m     83\u001B[0m label_encoder \u001B[38;5;241m=\u001B[39m LabelEncoder()\n",
+      "\u001B[1;31mValueError\u001B[0m: Failed to load data."
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from bundle.DataCraft import load_sentence_eeg_prob_data\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "# Constants\n",
+    "NUM_CLASSES = 36\n",
+    "MODEL_PATH = \"../../model/ecd/trained_eegcnn_model_selected_channels.pth\"\n",
+    "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "SELECTED_CHANNELS = [10, 33, 48, 50, 52, 55, 59, 61]\n",
+    "\n",
+    "# Dataset class\n",
+    "class EEGDataset(Dataset):\n",
+    "    def __init__(self, data, label_encoder):\n",
+    "        self.data = data\n",
+    "        self.label_encoder = label_encoder\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.data)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        chunk = np.array(self.data[idx][\"eeg_chunk\"], dtype=np.float32)[:, :, SELECTED_CHANNELS]\n",
+    "        chunk[30] *= 3.0\n",
+    "        label = self.label_encoder.transform([self.data[idx][\"character\"]])[0]\n",
+    "        return torch.tensor(chunk).unsqueeze(0), torch.tensor(label)\n",
+    "\n",
+    "# Model Definition\n",
+    "class SEBlock(nn.Module):\n",
+    "    def __init__(self, channels, reduction=16):\n",
+    "        super(SEBlock, self).__init__()\n",
+    "        self.pool = nn.AdaptiveAvgPool3d(1)\n",
+    "        self.fc = nn.Sequential(\n",
+    "            nn.Linear(channels, channels // reduction, bias=False),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.Linear(channels // reduction, channels, bias=False),\n",
+    "            nn.Sigmoid()\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        b, c, _, _, _ = x.size()\n",
+    "        y = self.pool(x).view(b, c)\n",
+    "        y = self.fc(y).view(b, c, 1, 1, 1)\n",
+    "        return x * y.expand_as(x)\n",
+    "\n",
+    "class EEGCNN(nn.Module):\n",
+    "    def __init__(self, num_classes=NUM_CLASSES):\n",
+    "        super(EEGCNN, self).__init__()\n",
+    "        self.conv1 = nn.Conv3d(1, 32, kernel_size=3, padding=1)\n",
+    "        self.bn1 = nn.BatchNorm3d(32)\n",
+    "\n",
+    "        self.conv2 = nn.Conv3d(32, 64, kernel_size=3, padding=1)\n",
+    "        self.bn2 = nn.BatchNorm3d(64)\n",
+    "        self.se1 = SEBlock(64)\n",
+    "\n",
+    "        self.conv3 = nn.Conv3d(64, 128, kernel_size=3, padding=1)\n",
+    "        self.bn3 = nn.BatchNorm3d(128)\n",
+    "        self.se2 = SEBlock(128)\n",
+    "\n",
+    "        self.pool = nn.AdaptiveAvgPool3d(1)\n",
+    "        self.fc1 = nn.Linear(128, 64)\n",
+    "        self.dropout = nn.Dropout(0.3)\n",
+    "        self.fc2 = nn.Linear(64, num_classes)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = torch.relu(self.bn1(self.conv1(x)))\n",
+    "        x = torch.relu(self.bn2(self.conv2(x)))\n",
+    "        x = self.se1(x)\n",
+    "        x = torch.relu(self.bn3(self.conv3(x)))\n",
+    "        x = self.se2(x)\n",
+    "        x = self.pool(x).squeeze()\n",
+    "        x = self.dropout(torch.relu(self.fc1(x)))\n",
+    "        return self.fc2(x)\n",
+    "\n",
+    "# Load data\n",
+    "raw_data = load_sentence_eeg_prob_data(\"../../data/characters_eeg_test.pkl\")\n",
+    "if not raw_data:\n",
+    "    raise ValueError(\"Failed to load data.\")\n",
+    "\n",
+    "all_labels = [item[\"character\"] for item in raw_data]\n",
+    "label_encoder = LabelEncoder()\n",
+    "label_encoder.fit(all_labels)\n",
+    "\n",
+    "# Create test set\n",
+    "test_dataset = EEGDataset(raw_data, label_encoder)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=8)\n",
+    "\n",
+    "# Load model\n",
+    "model = EEGCNN()\n",
+    "model.load_state_dict(torch.load(MODEL_PATH, map_location=DEVICE))\n",
+    "model.to(DEVICE)\n",
+    "model.eval()\n",
+    "\n",
+    "# Evaluation\n",
+    "correct = total = 0\n",
+    "y_true, y_pred = [], []\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    for inputs, targets in test_loader:\n",
+    "        inputs, targets = inputs.to(DEVICE), targets.to(DEVICE)\n",
+    "        outputs = model(inputs)\n",
+    "        preds = outputs.argmax(dim=1)\n",
+    "        correct += (preds == targets).sum().item()\n",
+    "        total += targets.size(0)\n",
+    "        y_true.extend(targets.cpu().numpy())\n",
+    "        y_pred.extend(preds.cpu().numpy())\n",
+    "\n",
+    "print(f\"\\nTest Accuracy: {correct / total:.2%}\")\n",
+    "print(\"\\nClassification Report:\")\n",
+    "print(classification_report(\n",
+    "    y_true, \n",
+    "    y_pred, \n",
+    "    labels=label_encoder.transform(label_encoder.classes_), \n",
+    "    target_names=label_encoder.classes_\n",
+    "))"
+   ]
   }
  ],
  "metadata": {
