--- a/ecd/jupyter/model/test_ecd.ipynb
+++ b/ecd/jupyter/model/test_ecd.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-06-28T20:54:32.897734900Z",
-     "start_time": "2025-06-28T20:54:28.845483700Z"
+     "end_time": "2025-06-28T21:02:05.896228800Z",
+     "start_time": "2025-06-28T20:58:08.413242Z"
     }
    },
    "outputs": [
@@ -16,19 +16,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Attempting to load processed data from: ../../data/characters_eeg_test.pkl\n",
-      "Error: File not found at ../../data/characters_eeg_test.pkl.\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Failed to load data.",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[1], line 80\u001B[0m\n\u001B[0;32m     78\u001B[0m raw_data \u001B[38;5;241m=\u001B[39m load_sentence_eeg_prob_data(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m../../data/characters_eeg_test.pkl\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m     79\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m raw_data:\n\u001B[1;32m---> 80\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mFailed to load data.\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m     82\u001B[0m all_labels \u001B[38;5;241m=\u001B[39m [item[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mcharacter\u001B[39m\u001B[38;5;124m\"\u001B[39m] \u001B[38;5;28;01mfor\u001B[39;00m item \u001B[38;5;129;01min\u001B[39;00m raw_data]\n\u001B[0;32m     83\u001B[0m label_encoder \u001B[38;5;241m=\u001B[39m LabelEncoder()\n",
-      "\u001B[1;31mValueError\u001B[0m: Failed to load data."
+      "Attempting to load processed data from: ../../data/sentences_eeg_test.pkl\n",
+      "Successfully loaded processed data.\n",
+      "\n",
+      "Test Accuracy: 0.00%\n",
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           A       0.00      0.00      0.00     313.0\n",
+      "           B       0.00      0.00      0.00      85.0\n",
+      "           C       0.00      0.00      0.00     163.0\n",
+      "           D       0.00      0.00      0.00     245.0\n",
+      "           E       0.00      0.00      0.00     610.0\n",
+      "           F       0.00      0.00      0.00     102.0\n",
+      "           G       0.00      0.00      0.00     124.0\n",
+      "           H       0.00      0.00      0.00     335.0\n",
+      "           I       0.00      0.00      0.00     215.0\n",
+      "           J       0.00      0.00      0.00       2.0\n",
+      "           K       0.00      0.00      0.00      90.0\n",
+      "           L       0.00      0.00      0.00     298.0\n",
+      "           M       0.00      0.00      0.00     108.0\n",
+      "           N       0.00      0.00      0.00     228.0\n",
+      "           O       0.00      0.00      0.00     344.0\n",
+      "           P       0.00      0.00      0.00      75.0\n",
+      "           Q       0.00      0.00      0.00       3.0\n",
+      "           R       0.00      0.00      0.00     283.0\n",
+      "           T       0.00      0.00      0.00     328.0\n",
+      "           U       0.00      0.00      0.00      58.0\n",
+      "           V       0.00      0.00      0.00      51.0\n",
+      "           W       0.00      0.00      0.00     147.0\n",
+      "           X       0.00      0.00      0.00       5.0\n",
+      "           Y       0.00      0.00      0.00      54.0\n",
+      "           Z       0.00      0.00      0.00       3.0\n",
+      "\n",
+      "   micro avg       0.00      0.00      0.00    4269.0\n",
+      "   macro avg       0.00      0.00      0.00    4269.0\n",
+      "weighted avg       0.00      0.00      0.00    4269.0\n"
      ]
     }
    ],
@@ -110,7 +134,7 @@
     "        return self.fc2(x)\n",
     "\n",
     "# Load data\n",
-    "raw_data = load_sentence_eeg_prob_data(\"../../data/characters_eeg_test.pkl\")\n",
+    "raw_data = load_sentence_eeg_prob_data(\"../../data/sentences_eeg_test.pkl\")\n",
     "if not raw_data:\n",
     "    raise ValueError(\"Failed to load data.\")\n",
     "\n",
@@ -144,11 +168,14 @@
     "\n",
     "print(f\"\\nTest Accuracy: {correct / total:.2%}\")\n",
     "print(\"\\nClassification Report:\")\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
     "print(classification_report(\n",
-    "    y_true, \n",
-    "    y_pred, \n",
-    "    labels=label_encoder.transform(label_encoder.classes_), \n",
-    "    target_names=label_encoder.classes_\n",
+    "    y_true,\n",
+    "    y_pred,\n",
+    "    labels=label_encoder.transform(label_encoder.classes_),\n",
+    "    target_names=label_encoder.classes_,\n",
+    "    zero_division=0\n",
     "))"
    ]
   }
