--- a/ecd/jupyter/data_processing/visualizations.ipynb
+++ b/ecd/jupyter/data_processing/visualizations.ipynb
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from bundle.DataCraft import * \n",
     "\n",
+    "output_dir=\"../../visualizations\"\n",
     "\n",
-    "\n",
-    "def create_visualizations(data, output_dir=\"../../visualizations\"):\n",
+    "def create_visualizations(data):\n",
     "    \"\"\"Creates and saves various visualizations of the data structure.\"\"\"\n",
     "    if not data:\n",
     "        print(\"No data to visualize.\")\n",
@@ -34,7 +34,7 @@
     "    \n",
     "    \n",
     "    # EEG Sample Heatmap\n",
-    "    index = 10 \n",
+    "    index = 1 \n",
     "    sample_item = data[index] if index < len(data) else None\n",
     "\n",
     "    if sample_item and sample_item['eeg_chunk']:\n",
@@ -123,37 +123,16 @@
     "    \n",
     "    print(f\"Data summary:{summary_text}\")\n",
     "    \n",
-    "    print(f\"\\nAll visualizations saved to {output_dir}/\")\n",
-    "    return output_dir\n"
+    "    print(f\"\\nAll visualizations saved to {output_dir}/\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-26T13:23:47.378799100Z",
-     "start_time": "2025-06-26T13:23:47.349223Z"
+     "end_time": "2025-06-30T08:57:50.148316800Z",
+     "start_time": "2025-06-30T08:57:50.092556100Z"
     }
    },
    "id": "b0a3bddf2668f1b6"
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# 3D Visualization of EEG Data"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "84e41ac4c13cd188"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "210ff6ea851adc4c"
   },
   {
    "cell_type": "markdown",
@@ -167,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -202,7 +181,7 @@
     "\n",
     "\n",
     "if data:\n",
-    "    output_dir = create_visualizations(data)\n",
+    "    create_visualizations(data)\n",
     "    print(f\"\\nTo view the visualizations, check the files in the {output_dir} directory.\")\n",
     "else:\n",
     "    print(\"Failed to load data. Please check the file path.\")"
@@ -210,8 +189,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-26T13:23:49.442941100Z",
-     "start_time": "2025-06-26T13:23:47.367687500Z"
+     "end_time": "2025-06-30T08:57:53.145969400Z",
+     "start_time": "2025-06-30T08:57:50.108107700Z"
     }
    },
    "id": "723be49fdf1891c0"
