--- a/ecd/jupyter/model/test_ecd.ipynb
+++ b/ecd/jupyter/model/test_ecd.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
+    "is_executing": true,
     "ExecuteTime": {
-     "end_time": "2025-06-28T21:02:05.896228800Z",
-     "start_time": "2025-06-28T20:58:08.413242Z"
+     "start_time": "2025-06-29T13:31:01.808995600Z"
     }
    },
    "outputs": [
@@ -16,54 +16,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Attempting to load processed data from: ../../data/sentences_eeg_test.pkl\n",
-      "Successfully loaded processed data.\n",
-      "\n",
-      "Test Accuracy: 0.00%\n",
-      "\n",
-      "Classification Report:\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           A       0.00      0.00      0.00     313.0\n",
-      "           B       0.00      0.00      0.00      85.0\n",
-      "           C       0.00      0.00      0.00     163.0\n",
-      "           D       0.00      0.00      0.00     245.0\n",
-      "           E       0.00      0.00      0.00     610.0\n",
-      "           F       0.00      0.00      0.00     102.0\n",
-      "           G       0.00      0.00      0.00     124.0\n",
-      "           H       0.00      0.00      0.00     335.0\n",
-      "           I       0.00      0.00      0.00     215.0\n",
-      "           J       0.00      0.00      0.00       2.0\n",
-      "           K       0.00      0.00      0.00      90.0\n",
-      "           L       0.00      0.00      0.00     298.0\n",
-      "           M       0.00      0.00      0.00     108.0\n",
-      "           N       0.00      0.00      0.00     228.0\n",
-      "           O       0.00      0.00      0.00     344.0\n",
-      "           P       0.00      0.00      0.00      75.0\n",
-      "           Q       0.00      0.00      0.00       3.0\n",
-      "           R       0.00      0.00      0.00     283.0\n",
-      "           T       0.00      0.00      0.00     328.0\n",
-      "           U       0.00      0.00      0.00      58.0\n",
-      "           V       0.00      0.00      0.00      51.0\n",
-      "           W       0.00      0.00      0.00     147.0\n",
-      "           X       0.00      0.00      0.00       5.0\n",
-      "           Y       0.00      0.00      0.00      54.0\n",
-      "           Z       0.00      0.00      0.00       3.0\n",
-      "\n",
-      "   micro avg       0.00      0.00      0.00    4269.0\n",
-      "   macro avg       0.00      0.00      0.00    4269.0\n",
-      "weighted avg       0.00      0.00      0.00    4269.0\n"
+      "Attempting to load processed data from: ../../data/sentences_eeg.pkl\n",
+      "Successfully loaded processed data.\n"
      ]
     }
    ],
    "source": [
+    "import os\n",
+    "from sklearn.model_selection import train_test_split\n",
     "import numpy as np\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from bundle.DataCraft import load_sentence_eeg_prob_data\n",
-    "from sklearn.metrics import classification_report\n",
+    "import torch.nn.functional as F\n",
     "\n",
     "# Constants\n",
     "NUM_CLASSES = 36\n",
@@ -134,7 +101,7 @@
     "        return self.fc2(x)\n",
     "\n",
     "# Load data\n",
-    "raw_data = load_sentence_eeg_prob_data(\"../../data/sentences_eeg_test.pkl\")\n",
+    "raw_data = load_sentence_eeg_prob_data()\n",
     "if not raw_data:\n",
     "    raise ValueError(\"Failed to load data.\")\n",
     "\n",
@@ -143,7 +110,8 @@
     "label_encoder.fit(all_labels)\n",
     "\n",
     "# Create test set\n",
-    "test_dataset = EEGDataset(raw_data, label_encoder)\n",
+    "_ , test_set = train_test_split(raw_data, test_size=0.2, random_state=42)\n",
+    "test_dataset = EEGDataset(test_set, label_encoder)\n",
     "test_loader = DataLoader(test_dataset, batch_size=8)\n",
     "\n",
     "# Load model\n",
@@ -176,7 +144,7 @@
     "    labels=label_encoder.transform(label_encoder.classes_),\n",
     "    target_names=label_encoder.classes_,\n",
     "    zero_division=0\n",
-    "))"
+    "))\n"
    ]
   }
  ],
