--- a/ecd/jupyter/model/test_ecd.ipynb
+++ b/ecd/jupyter/model/test_ecd.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
-    "is_executing": true,
     "ExecuteTime": {
-     "start_time": "2025-06-29T13:31:01.808995600Z"
+     "end_time": "2025-06-30T10:18:45.824108500Z",
+     "start_time": "2025-06-30T10:14:58.303748500Z"
     }
    },
    "outputs": [
@@ -17,28 +17,79 @@
      "output_type": "stream",
      "text": [
       "Attempting to load processed data from: ../../data/sentences_eeg.pkl\n",
-      "Successfully loaded processed data.\n"
+      "Successfully loaded processed data.\n",
+      "\n",
+      "Test Accuracy: 91.61%\n",
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           4       0.00      0.00      0.00         1\n",
+      "           6       0.00      0.00      0.00         0\n",
+      "           8       0.00      0.00      0.00         0\n",
+      "           A       0.92      1.00      0.96        54\n",
+      "           B       0.50      0.73      0.59        11\n",
+      "           C       1.00      0.62      0.77        16\n",
+      "           D       0.90      1.00      0.95        66\n",
+      "           E       0.89      1.00      0.94       119\n",
+      "           F       1.00      1.00      1.00        23\n",
+      "           G       0.95      0.79      0.86        24\n",
+      "           H       0.91      1.00      0.95        40\n",
+      "           I       1.00      0.71      0.83        42\n",
+      "           J       0.00      0.00      0.00         0\n",
+      "           K       1.00      0.85      0.92        13\n",
+      "           L       1.00      1.00      1.00        43\n",
+      "           M       1.00      0.90      0.95        10\n",
+      "           N       1.00      1.00      1.00        38\n",
+      "           O       0.90      0.86      0.88        64\n",
+      "           P       1.00      0.83      0.91         6\n",
+      "           Q       0.00      0.00      0.00         2\n",
+      "           R       0.94      1.00      0.97        74\n",
+      "           T       0.99      0.93      0.96        71\n",
+      "           U       0.75      0.60      0.67        10\n",
+      "           V       0.50      0.44      0.47         9\n",
+      "           W       1.00      0.90      0.95        41\n",
+      "           X       0.00      0.00      0.00         1\n",
+      "           Y       0.80      0.50      0.62         8\n",
+      "           Z       0.00      0.00      0.00         1\n",
+      "\n",
+      "    accuracy                           0.92       787\n",
+      "   macro avg       0.68      0.63      0.65       787\n",
+      "weighted avg       0.92      0.92      0.92       787\n",
+      "Visualizations generated at: ../../visualizations\n"
      ]
     }
    ],
    "source": [
+    "# ===============================\n",
+    "# Imports and Configs\n",
+    "# ===============================\n",
     "import os\n",
-    "from sklearn.model_selection import train_test_split\n",
     "import numpy as np\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "from bundle.DataCraft import load_sentence_eeg_prob_data\n",
     "import torch.nn.functional as F\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.metrics import classification_report\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from matplotlib.patches import Rectangle\n",
     "\n",
+    "from bundle.DataCraft import load_sentence_eeg_prob_data\n",
+    "\n",
+    "# ===============================\n",
     "# Constants\n",
+    "# ===============================\n",
     "NUM_CLASSES = 36\n",
     "MODEL_PATH = \"../../model/ecd/trained_eegcnn_model_selected_channels.pth\"\n",
     "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "SELECTED_CHANNELS = [10, 33, 48, 50, 52, 55, 59, 61]\n",
     "\n",
-    "# Dataset class\n",
+    "# ===============================\n",
+    "# Dataset\n",
+    "# ===============================\n",
     "class EEGDataset(Dataset):\n",
     "    def __init__(self, data, label_encoder):\n",
     "        self.data = data\n",
@@ -53,7 +104,9 @@
     "        label = self.label_encoder.transform([self.data[idx][\"character\"]])[0]\n",
     "        return torch.tensor(chunk).unsqueeze(0), torch.tensor(label)\n",
     "\n",
+    "# ===============================\n",
     "# Model Definition\n",
+    "# ===============================\n",
     "class SEBlock(nn.Module):\n",
     "    def __init__(self, channels, reduction=16):\n",
     "        super(SEBlock, self).__init__()\n",
@@ -100,7 +153,9 @@
     "        x = self.dropout(torch.relu(self.fc1(x)))\n",
     "        return self.fc2(x)\n",
     "\n",
-    "# Load data\n",
+    "# ===============================\n",
+    "# Load Data and Model\n",
+    "# ===============================\n",
     "raw_data = load_sentence_eeg_prob_data()\n",
     "if not raw_data:\n",
     "    raise ValueError(\"Failed to load data.\")\n",
@@ -109,18 +164,18 @@
     "label_encoder = LabelEncoder()\n",
     "label_encoder.fit(all_labels)\n",
     "\n",
-    "# Create test set\n",
-    "_ , test_set = train_test_split(raw_data, test_size=0.2, random_state=42)\n",
+    "_, test_set = train_test_split(raw_data, test_size=0.1, random_state=42)\n",
     "test_dataset = EEGDataset(test_set, label_encoder)\n",
     "test_loader = DataLoader(test_dataset, batch_size=8)\n",
     "\n",
-    "# Load model\n",
     "model = EEGCNN()\n",
     "model.load_state_dict(torch.load(MODEL_PATH, map_location=DEVICE))\n",
     "model.to(DEVICE)\n",
     "model.eval()\n",
     "\n",
+    "# ===============================\n",
     "# Evaluation\n",
+    "# ===============================\n",
     "correct = total = 0\n",
     "y_true, y_pred = [], []\n",
     "\n",
@@ -136,15 +191,126 @@
     "\n",
     "print(f\"\\nTest Accuracy: {correct / total:.2%}\")\n",
     "print(\"\\nClassification Report:\")\n",
-    "from sklearn.metrics import classification_report\n",
-    "\n",
     "print(classification_report(\n",
     "    y_true,\n",
     "    y_pred,\n",
     "    labels=label_encoder.transform(label_encoder.classes_),\n",
     "    target_names=label_encoder.classes_,\n",
     "    zero_division=0\n",
-    "))\n"
+    "))\n",
+    "\n",
+    "# ===============================\n",
+    "# Visualizations\n",
+    "# ===============================\n",
+    "def plot_conv1_activations(model, input_tensor, output_dir, index):\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        input_tensor = input_tensor.unsqueeze(0).to(DEVICE)\n",
+    "        x1 = F.relu(model.bn1(model.conv1(input_tensor)))\n",
+    "    x1 = x1.squeeze(0)[:, 30, :, :]\n",
+    "    fig, axes = plt.subplots(4, 8, figsize=(20, 10))\n",
+    "    fig.suptitle(\"Conv1 Activations at Frame 30\", fontsize=16)\n",
+    "    for i in range(32):\n",
+    "        ax = axes[i // 8][i % 8]\n",
+    "        sns.heatmap(x1[i].cpu(), ax=ax, cmap='plasma', cbar=False)\n",
+    "        ax.set_title(f\"F{i}\")\n",
+    "        ax.axis('off')\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(os.path.join(output_dir, f\"sample_{index}_conv1_activations.png\"))\n",
+    "    plt.close()\n",
+    "\n",
+    "\n",
+    "def plot_conv2_activations(model, input_tensor, output_dir, index):\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        input_tensor = input_tensor.unsqueeze(0).to(DEVICE)\n",
+    "        x1 = F.relu(model.bn1(model.conv2(input_tensor)))\n",
+    "    x1 = x1.squeeze(0)[:, 30, :, :]\n",
+    "    fig, axes = plt.subplots(4, 8, figsize=(20, 10))\n",
+    "    fig.suptitle(\"Conv1 Activations at Frame 30\", fontsize=16)\n",
+    "    for i in range(32):\n",
+    "        ax = axes[i // 8][i % 8]\n",
+    "        sns.heatmap(x1[i].cpu(), ax=ax, cmap='plasma', cbar=False)\n",
+    "        ax.set_title(f\"F{i}\")\n",
+    "        ax.axis('off')\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(os.path.join(output_dir, f\"sample_{index}_conv1_activations.png\"))\n",
+    "    plt.close()\n",
+    "    \n",
+    "def plot_conv2_activations(model, input_tensor, output_dir, index):\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        input_tensor = input_tensor.unsqueeze(0).to(DEVICE)  # (1, 1, 31, 78, 8)\n",
+    "        x1 = F.relu(model.bn1(model.conv1(input_tensor)))    # (1, 32, 31, 78, 8)\n",
+    "        x2 = F.relu(model.bn2(model.conv2(x1)))              # (1, 64, 31, 78, 8)\n",
+    "    \n",
+    "    x2 = x2.squeeze(0)[:, 30, :, :]  # Shape: (64, 78, 8)\n",
+    "\n",
+    "    fig, axes = plt.subplots(8, 8, figsize=(20, 16))\n",
+    "    fig.suptitle(\"Conv2 Activations at Frame 30\", fontsize=16)\n",
+    "\n",
+    "    for i in range(64):\n",
+    "        ax = axes[i // 8][i % 8]\n",
+    "        sns.heatmap(x2[i].cpu(), ax=ax, cmap='plasma', cbar=False)\n",
+    "        ax.set_title(f\"F{i}\")\n",
+    "        ax.axis('off')\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(os.path.join(output_dir, f\"sample_{index}_conv2_activations.png\"))\n",
+    "    plt.close()\n",
+    "\n",
+    "def plot_conv3_activations(model, input_tensor, output_dir, index):\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        input_tensor = input_tensor.unsqueeze(0).to(DEVICE)\n",
+    "        x1 = F.relu(model.bn1(model.conv1(input_tensor)))    # (1, 32, 31, 78, 8)\n",
+    "        x2 = F.relu(model.bn2(model.conv2(x1)))              # (1, 64, 31, 78, 8)\n",
+    "        x2 = model.se1(x2)\n",
+    "        x3 = F.relu(model.bn3(model.conv3(x2)))              # (1, 128, 31, 78, 8)\n",
+    "    \n",
+    "    x3 = x3.squeeze(0)[:, 30, :, :]  # Shape: (128, 78, 8)\n",
+    "\n",
+    "    fig, axes = plt.subplots(8, 16, figsize=(24, 16))\n",
+    "    fig.suptitle(\"Conv3 Activations at Frame 30\", fontsize=16)\n",
+    "\n",
+    "    for i in range(128):\n",
+    "        ax = axes[i // 16][i % 16]\n",
+    "        sns.heatmap(x3[i].cpu(), ax=ax, cmap='plasma', cbar=False)\n",
+    "        ax.set_title(f\"F{i}\", fontsize=8)\n",
+    "        ax.axis('off')\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(os.path.join(output_dir, f\"sample_{index}_conv3_activations.png\"))\n",
+    "    plt.close()\n",
+    "\n",
+    "# ===============================\n",
+    "# Main Visualization Caller\n",
+    "# ===============================\n",
+    "def create_visualizations_model(data, model, output_dir=\"../../visualizations\"):\n",
+    "    if not data:\n",
+    "        print(\"No data to visualize.\")\n",
+    "        return\n",
+    "\n",
+    "    os.makedirs(output_dir, exist_ok=True)\n",
+    "    index = 10\n",
+    "    if index >= len(data):\n",
+    "        print(\"Invalid index.\")\n",
+    "        return\n",
+    "\n",
+    "    sample = data[index]\n",
+    "    chunk = np.array(sample[\"eeg_chunk\"], dtype=np.float32)[:, :, SELECTED_CHANNELS]\n",
+    "    chunk[30] *= 3.0\n",
+    "    input_tensor = torch.tensor(chunk).unsqueeze(0)\n",
+    "\n",
+    "    plot_conv1_activations(model, input_tensor, output_dir, index)\n",
+    "    plot_conv2_activations(model, input_tensor, output_dir, index)\n",
+    "    plot_conv3_activations(model, input_tensor, output_dir, index)\n",
+    "\n",
+    "\n",
+    "    print(f\"Visualizations generated at: {output_dir}\")\n",
+    "\n",
+    "# Run visualization\n",
+    "create_visualizations_model(raw_data, model)"
    ]
   }
  ],
