--- a/ecd/jupyter/data_processing/extract_sentence_data.ipynb
+++ b/ecd/jupyter/data_processing/extract_sentence_data.ipynb
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "189d752f13e679c2",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-30T10:19:02.631754400Z",
-     "start_time": "2025-06-30T10:19:02.568163700Z"
+     "end_time": "2025-07-01T10:18:29.761715300Z",
+     "start_time": "2025-07-01T10:18:29.723157300Z"
     }
    },
    "outputs": [],
@@ -48,13 +48,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "1271fe52447729d6",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-30T10:19:02.649031300Z",
-     "start_time": "2025-06-30T10:19:02.589634500Z"
+     "end_time": "2025-07-01T10:18:29.774775400Z",
+     "start_time": "2025-07-01T10:18:29.739311900Z"
     }
    },
    "outputs": [
@@ -124,13 +124,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "fee7df9628f0876a",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-30T10:19:07.468268600Z",
-     "start_time": "2025-06-30T10:19:02.610389600Z"
+     "end_time": "2025-07-01T10:18:35.008354300Z",
+     "start_time": "2025-07-01T10:18:29.761715300Z"
     }
    },
    "outputs": [
@@ -660,13 +660,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "35f7cccb37f237b4",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-30T10:19:08.715030500Z",
-     "start_time": "2025-06-30T10:19:07.470388200Z"
+     "end_time": "2025-07-01T10:18:36.131877100Z",
+     "start_time": "2025-07-01T10:18:35.010358Z"
     }
    },
    "outputs": [
@@ -702,13 +702,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "5e44c00fca7cb60f",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-30T10:19:09.608349900Z",
-     "start_time": "2025-06-30T10:19:08.720029200Z"
+     "end_time": "2025-07-01T10:18:36.831400Z",
+     "start_time": "2025-07-01T10:18:36.131877100Z"
     }
    },
    "outputs": [
@@ -722,20 +722,22 @@
       "Example of first item: H\n",
       "Example of first item: 1\n",
       "Example of first item: THE QUICK DOG JUMPED OVER\n",
-      "Example of first item: [array([[-0.54037046, -1.6272256 , -0.8909307 , ..., -0.36527073,\n",
-      "        -0.45629573, -0.9330822 ],\n",
-      "       [-0.7337005 , -1.8734369 , -1.1107128 , ..., -0.46904737,\n",
-      "        -0.72463924, -1.0288155 ],\n",
-      "       [-0.9022075 , -2.0632687 , -1.289877  , ..., -0.5228547 ,\n",
-      "        -0.94493437, -1.1008296 ],\n",
+      "Example of first item: [array([[ 0.7758755 ,  0.9237902 ,  0.79516953, ...,  1.7251105 ,\n",
+      "         1.8952785 ,  1.7748973 ],\n",
+      "       [ 0.6073626 ,  0.8665243 ,  0.700175  , ...,  1.5955708 ,\n",
+      "         1.8149357 ,  1.6690725 ],\n",
+      "       [ 0.47421762,  0.85209244,  0.63459575, ...,  1.3974723 ,\n",
+      "         1.6194837 ,  1.4821903 ],\n",
       "       ...,\n",
-      "       [-1.4762    , -1.1797712 , -1.7743834 , ..., -1.6437798 ,\n",
-      "        -0.24375428, -1.5941732 ],\n",
-      "       [-1.3776388 , -1.12282   , -1.6979017 , ..., -1.7012546 ,\n",
-      "        -0.3126163 , -1.714043  ],\n",
-      "       [-1.2832029 , -1.011978  , -1.5232986 , ..., -1.697937  ,\n",
-      "        -0.3192157 , -1.7902619 ]], dtype=float32)]\n",
-      "Example of first item: (78, 64)\n"
+      "       [-0.75434214, -1.0152866 , -0.5195334 , ..., -0.3559552 ,\n",
+      "        -0.29637173, -0.70139366],\n",
+      "       [-0.59730214, -0.8856115 , -0.3951398 , ..., -0.4825735 ,\n",
+      "        -0.5561047 , -0.848363  ],\n",
+      "       [-0.5027137 , -0.74316084, -0.2996873 , ..., -0.64054483,\n",
+      "        -0.853964  , -1.004107  ]], dtype=float32)]\n",
+      "Example of first item: (78, 64)\n",
+      "Example of first item: 0.0045\n",
+      "Example of first item: 0.9564\n"
      ]
     }
    ],
@@ -751,6 +753,8 @@
     "        print(\"Example of first item:\", final_data[1][\"sentence\"])\n",
     "        print(\"Example of first item:\", final_data[1][\"eeg_chunk\"][0:1])\n",
     "        print(\"Example of first item:\", final_data[1][\"prob_matrix_78x64\"].shape)\n",
+    "        print(\"Example of first item:\", final_data[1][\"prob_matrix_78x64\"][0][0])\n",
+    "        print(\"Example of first item:\", final_data[1][\"prob_matrix_78x64\"][7][0])\n",
     "else:\n",
     "    print(\"Failed to load data. Please check the file path.\")"
    ]
