--- a/ecd/jupyter/model/test_ecd.ipynb
+++ b/ecd/jupyter/model/test_ecd.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-06-30T10:18:45.824108500Z",
-     "start_time": "2025-06-30T10:14:58.303748500Z"
+     "end_time": "2025-07-01T11:02:46.954102800Z",
+     "start_time": "2025-07-01T10:57:18.467533200Z"
     }
    },
    "outputs": [
@@ -18,44 +18,74 @@
      "text": [
       "Attempting to load processed data from: ../../data/sentences_eeg.pkl\n",
       "Successfully loaded processed data.\n",
+      "Predicted: A | True: A\n",
+      "Predicted: G | True: G\n",
+      "Predicted: H | True: H\n",
+      "Predicted: T | True: T\n",
+      "Predicted: E | True: E\n",
+      "Predicted: R | True: R\n",
+      "Predicted: N | True: N\n",
+      "Predicted: E | True: E\n",
+      "Predicted: E | True: E\n",
+      "Predicted: F | True: F\n",
+      "Predicted: T | True: T\n",
+      "Predicted: I | True: I\n",
+      "Predicted: A | True: A\n",
+      "Predicted: R | True: R\n",
+      "Predicted: L | True: L\n",
+      "Predicted: G | True: G\n",
+      "Predicted: E | True: E\n",
+      "Predicted: R | True: R\n",
+      "Predicted: G | True: G\n",
+      "Predicted: F | True: F\n",
+      "Predicted: R | True: R\n",
+      "Predicted: W | True: W\n",
+      "Predicted: H | True: H\n",
+      "Predicted: O | True: O\n",
+      "Predicted: G | True: G\n",
+      "Predicted: A | True: A\n",
+      "Predicted: G | True: P\n",
+      "Predicted: E | True: E\n",
+      "Predicted: E | True: E\n",
+      "Predicted: H | True: H\n",
       "\n",
       "Test Accuracy: 91.61%\n",
       "\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           4       0.00      0.00      0.00         1\n",
+      "           4       0.00      0.00      0.00         0\n",
       "           6       0.00      0.00      0.00         0\n",
       "           8       0.00      0.00      0.00         0\n",
-      "           A       0.92      1.00      0.96        54\n",
-      "           B       0.50      0.73      0.59        11\n",
-      "           C       1.00      0.62      0.77        16\n",
-      "           D       0.90      1.00      0.95        66\n",
-      "           E       0.89      1.00      0.94       119\n",
-      "           F       1.00      1.00      1.00        23\n",
-      "           G       0.95      0.79      0.86        24\n",
-      "           H       0.91      1.00      0.95        40\n",
-      "           I       1.00      0.71      0.83        42\n",
-      "           J       0.00      0.00      0.00         0\n",
-      "           K       1.00      0.85      0.92        13\n",
-      "           L       1.00      1.00      1.00        43\n",
-      "           M       1.00      0.90      0.95        10\n",
-      "           N       1.00      1.00      1.00        38\n",
-      "           O       0.90      0.86      0.88        64\n",
-      "           P       1.00      0.83      0.91         6\n",
+      "           A       0.90      1.00      0.95       112\n",
+      "           B       0.65      0.81      0.72        21\n",
+      "           C       1.00      0.75      0.86        36\n",
+      "           D       0.94      1.00      0.97       123\n",
+      "           E       0.88      1.00      0.94       253\n",
+      "           F       1.00      1.00      1.00        45\n",
+      "           G       0.88      0.70      0.78        43\n",
+      "           H       0.85      1.00      0.92        90\n",
+      "           I       1.00      0.81      0.89        77\n",
+      "           J       0.00      0.00      0.00         1\n",
+      "           K       1.00      0.88      0.93        40\n",
+      "           L       1.00      1.00      1.00        87\n",
+      "           M       1.00      0.84      0.91        25\n",
+      "           N       1.00      1.00      1.00        73\n",
+      "           O       0.93      0.80      0.86       147\n",
+      "           P       1.00      0.78      0.88        18\n",
       "           Q       0.00      0.00      0.00         2\n",
-      "           R       0.94      1.00      0.97        74\n",
-      "           T       0.99      0.93      0.96        71\n",
-      "           U       0.75      0.60      0.67        10\n",
-      "           V       0.50      0.44      0.47         9\n",
-      "           W       1.00      0.90      0.95        41\n",
-      "           X       0.00      0.00      0.00         1\n",
-      "           Y       0.80      0.50      0.62         8\n",
+      "           R       0.92      1.00      0.96       130\n",
+      "           T       0.97      0.91      0.94       122\n",
+      "           U       0.67      0.38      0.49        26\n",
+      "           V       0.70      0.70      0.70        20\n",
+      "           W       1.00      0.92      0.96        71\n",
+      "           X       0.00      0.00      0.00         2\n",
+      "           Y       0.86      0.67      0.75         9\n",
       "           Z       0.00      0.00      0.00         1\n",
       "\n",
-      "    accuracy                           0.92       787\n",
-      "   macro avg       0.68      0.63      0.65       787\n",
-      "weighted avg       0.92      0.92      0.92       787\n",
+      "    accuracy                           0.92      1574\n",
+      "   macro avg       0.68      0.64      0.66      1574\n",
+      "weighted avg       0.92      0.92      0.91      1574\n",
       "Visualizations generated at: ../../visualizations\n"
      ]
     }
@@ -164,9 +194,9 @@
     "label_encoder = LabelEncoder()\n",
     "label_encoder.fit(all_labels)\n",
     "\n",
-    "_, test_set = train_test_split(raw_data, test_size=0.1, random_state=42)\n",
+    "_, test_set = train_test_split(raw_data, test_size=0.2, random_state=3)\n",
     "test_dataset = EEGDataset(test_set, label_encoder)\n",
-    "test_loader = DataLoader(test_dataset, batch_size=8)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=64)\n",
     "\n",
     "model = EEGCNN()\n",
     "model.load_state_dict(torch.load(MODEL_PATH, map_location=DEVICE))\n",
@@ -176,19 +206,36 @@
     "# ===============================\n",
     "# Evaluation\n",
     "# ===============================\n",
+    "# ===============================\n",
+    "# Evaluation with Character Output (Print First 30 Only)\n",
+    "# ===============================\n",
     "correct = total = 0\n",
     "y_true, y_pred = [], []\n",
+    "printed = 0  # Print counter\n",
     "\n",
     "with torch.no_grad():\n",
     "    for inputs, targets in test_loader:\n",
     "        inputs, targets = inputs.to(DEVICE), targets.to(DEVICE)\n",
     "        outputs = model(inputs)\n",
     "        preds = outputs.argmax(dim=1)\n",
+    "\n",
     "        correct += (preds == targets).sum().item()\n",
     "        total += targets.size(0)\n",
+    "\n",
     "        y_true.extend(targets.cpu().numpy())\n",
     "        y_pred.extend(preds.cpu().numpy())\n",
     "\n",
+    "        # Print only the first 30 predictions as characters\n",
+    "        if printed < 30:\n",
+    "            pred_chars = label_encoder.inverse_transform(preds.cpu().numpy())\n",
+    "            true_chars = label_encoder.inverse_transform(targets.cpu().numpy())\n",
+    "            for pred_char, true_char in zip(pred_chars, true_chars):\n",
+    "                if printed >= 30:\n",
+    "                    break\n",
+    "                print(f\"Predicted: {pred_char} | True: {true_char}\")\n",
+    "                printed += 1\n",
+    "\n",
+    "# Accuracy and Report\n",
     "print(f\"\\nTest Accuracy: {correct / total:.2%}\")\n",
     "print(\"\\nClassification Report:\")\n",
     "print(classification_report(\n",
