--- a/ecd/jupyter/model/test_ecd.ipynb
+++ b/ecd/jupyter/model/test_ecd.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-01T11:02:46.954102800Z",
-     "start_time": "2025-07-01T10:57:18.467533200Z"
+     "end_time": "2025-07-01T11:12:19.527359300Z",
+     "start_time": "2025-07-01T11:07:45.352744900Z"
     }
    },
    "outputs": [
@@ -186,7 +186,7 @@
     "# ===============================\n",
     "# Load Data and Model\n",
     "# ===============================\n",
-    "raw_data = load_sentence_eeg_prob_data()\n",
+    "raw_data = load_sentence_eeg_prob_data(\"../../data/sentences_eeg.pkl\")\n",
     "if not raw_data:\n",
     "    raise ValueError(\"Failed to load data.\")\n",
     "\n",
